bugfix GitHub badge not showing on light mode

--- a/src/App.css
+++ b/src/App.css
@@ -41,5 +41,5 @@
 }
 
 .badgelink {
-    color: white;
+    color: calc(var(--text-color));
 }
